--- a/wiki/src/main/resources/application.properties
+++ b/wiki/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 server.port=8080
 
-test.hello=Hello4
+hello.test=Hello4
 
 # 增加数据库连接
-spring.datasource.url=jdbc:mysql://rm-uf6470s9615e13hc4no.mysql.rds.aliyuncs.com/wikidev?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://rm-uf68g5scz4lge9ki6to.mysql.rds.aliyuncs.com/wiki?characterEncoding=UTF-8&useSSL=false&serverTimezone=Australia/Sydney
 spring.datasource.username=wiki
-spring.datasource.password=ysz991203
+spring.datasource.password=Ysz991203!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-## 配置mybatis所有Mapper.xml所在的路径
-#mybatis.mapper-locations=classpath:/mapper/**/*.xml
-#
+# 配置mybatis所有Mapper.xml所在的路径
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
+
 ## 打印所有的sql日志：sql, 参数, 结果
 #logging.level.com.jiawa.wiki.mapper=trace
 #
