--- a/wiki/pom.xml
+++ b/wiki/pom.xml
@@ -76,6 +76,11 @@
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
