--- a/wiki/web/package.json
+++ b/wiki/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.10.0",
     "vue": "^3.0.0",
