--- a/wiki/web/.gitignore
+++ b/wiki/web/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /dist
+/rocketmq-all-5.3.2-bin-release/
 
 
 # local env files
@@ -21,3 +22,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
