--- a/wiki/src/main/resources/application.properties
+++ b/wiki/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.data.redis.client-type=lettuce
 spring.data.redis.timeout=5000ms
 
 
-## rocketmq配置
-##rocketmq.name-server=127.0.0.1:9876
-##rocketmq.producer.group=defaultdev
+# rocketmq配置
+rocketmq.name-server=127.0.0.1:9876
+rocketmq.producer.group=defaultdev
 
