--- a/wiki/pom.xml
+++ b/wiki/pom.xml
@@ -88,11 +88,11 @@
 			<version>2.1.1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.rocketmq</groupId>
-			<artifactId>rocketmq-spring-boot-starter</artifactId>
-			<version>2.3.3</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.apache.rocketmq</groupId>-->
+<!--			<artifactId>rocketmq-spring-boot-starter</artifactId>-->
+<!--			<version>2.3.3</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
