--- a/wiki/src/main/resources/application.properties
+++ b/wiki/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 hello.test=Hello4
 
 # 增加数据库连接
-spring.datasource.url=jdbc:mysql://rm-uf68g5scz4lge9ki6to.mysql.rds.aliyuncs.com/wiki?characterEncoding=UTF-8&useSSL=false&serverTimezone=Australia/Sydney
+spring.datasource.url=jdbc:mysql://rm-uf68g5scz4lge9ki6to.mysql.rds.aliyuncs.com/wiki?characterEncoding=UTF-8&useSSL=false&serverTimezone=Australia/Sydney&allowMultiQueries=true
 spring.datasource.username=wikidev
 spring.datasource.password=Ysz991203!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
