--- a/wiki/web/package.json
+++ b/wiki/web/package.json
@@ -7,7 +7,8 @@
     "serve-prod": "vue-cli-service serve --mode prod",
     "build-dev": "vue-cli-service build --mode dev",
     "build-prod": "vue-cli-service build --mode prod",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "node scripts/patch-fork-ts-checker.js"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
