--- a/wiki/doc/deploy/web.conf
+++ b/wiki/doc/deploy/web.conf
@@ -1,7 +1,7 @@
 server{
   listen 80;
-  # server_name 8.133.184.84;
-  server_name wiki.courseimooc.com;
+  server_name 47.100.4.74;
+  #server_name wiki.courseimooc.com;
 
   location / {
     alias /root/web/;
