--- a/wiki/doc/deploy/server.conf
+++ b/wiki/doc/deploy/server.conf
@@ -1,7 +1,7 @@
 server{
   listen 80;
-  # server_name 8.133.184.84;
-  server_name wiki-server.courseimooc.com;
+  server_name 47.100.4.74;
+  #server_name wiki-server.matt-sample.com;
 
   location / {
     proxy_pass http://localhost:8880;
