--- a/wiki/web/.env.prod
+++ b/wiki/web/.env.prod
@@ -1,3 +1,3 @@
 NODE_ENV=production
-VUE_APP_SERVER=http://server.imooc.com
-VUE_APP_WS_SERVER=ws://server.imooc.com
+VUE_APP_SERVER=http://47.100.4.74
+VUE_APP_WS_SERVER=ws://47.100.4.74
