--- a/wiki/src/main/resources/application-prod.properties
+++ b/wiki/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # 增加数据库连接
-spring.datasource.url=jdbc:mysql://rm-uf68g5scz4lge9ki6.mysql.rds.aliyuncs.com/wiki?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://rm-uf65ot7089g23zv4i.mysql.rds.aliyuncs.com/wiki?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true
 spring.datasource.username=wiki
 spring.datasource.password=Ysz991203!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
