--- a/wiki/pom.xml
+++ b/wiki/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>17</java.version>
 		<knife4j.version>4.4.0</knife4j.version>
 		<langchain4j.version>1.3.0</langchain4j.version>
+		<langchain4j.community.version>1.3.0-beta9</langchain4j.community.version>
 	</properties>
 
 	<dependencyManagement>
@@ -38,6 +39,13 @@
 				<groupId>dev.langchain4j</groupId>
 				<artifactId>langchain4j-bom</artifactId>
 				<version>${langchain4j.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>dev.langchain4j</groupId>
+				<artifactId>langchain4j-community-bom</artifactId>
+				<version>${langchain4j.community.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -110,9 +118,19 @@
 			<version>${knife4j.version}</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>dev.langchain4j</groupId>-->
+<!--			<artifactId>langchain4j-open-ai</artifactId>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>dev.langchain4j</groupId>
-			<artifactId>langchain4j-open-ai</artifactId>
+			<artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>dev.langchain4j</groupId>
+			<artifactId>langchain4j-community-dashscope-spring-boot-starter</artifactId>
 		</dependency>
 
 <!--		<dependency>-->
